--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -62,7 +62,7 @@ html(lang="en")
                 Kakao.Link.sendCustom({
                     templateId: 30195,
                     templateArgs:{
-                        imageUrl: ${resultSharedImage}
+                        imageUrl: `${resultSharedImage}`
                     }
                 })
             }
