--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -62,7 +62,9 @@ html(lang="en")
                 Kakao.Link.sendCustom({
                     templateId: 30195,
                     templateArgs:{
-                        imageUrl: `${resultSharedImage}`
+                        title:"재미로 보는 관계 유형 테스트",
+                        description:"나의 인간관계 유형은?",
+                        imageUrl: "${resultSharedImage}"
                     }
                 })
             }
