--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -66,14 +66,14 @@ html(lang="en")
                         description: "나의 인간관계 유형은?",
                         imageUrl: resultSharedImage,
                         imageWidth: 850,
-                        imageHeight: 1160
-                        buttonTitle:"관계 유형 테스트하기"
+                        imageHeight: 1160,
                         link: {
                             mobileWebUrl: "https://jeokdanghi-relationship.com",
                             webUrl: "https://jeokdanghi-relationship.com",
                         },
                         
                     },
+                    buttonTitle: "관계 유형 테스트하기",
                 })
             }
             document.getElementById("facebookBtn").onclick = function() {
