--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,12 +2,12 @@
 html(lang="en")
     head
         //- 서비스 배포시 Unlock
-        //- script(async src="https://www.googletagmanager.com/gtag/js?id=UA-169195735-2")
-        //- script.
-        //-     window.dataLayer = window.dataLayer || [];
-        //-     function gtag(){dataLayer.push(arguments);}
-        //-     gtag('js', new Date());
-        //-     gtag('config', 'UA-169195735-2');
+        script(async src="https://www.googletagmanager.com/gtag/js?id=UA-169195735-2")
+        script.
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-169195735-2');
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no")
         meta(name="HandheldFriendly" content="true")
@@ -66,14 +66,28 @@ html(lang="en")
                         description: "나의 인간관계 유형은?",
                         imageUrl: resultSharedImage,
                         imageWidth: 850,
-                        imageHeight: 1160,
+                        imageHeight: 1220,
                         link: {
                             mobileWebUrl: "https://jeokdanghi-relationship.com",
                             webUrl: "https://jeokdanghi-relationship.com",
                         },
-                        
                     },
-                    buttonTitle: "관계 유형 테스트하기",
+                    buttons: [
+                        {
+                            title: '관계 유형 테스트하기',
+                            link: {
+                                mobileWebUrl: 'https://jeokdanghi-relationship.com',
+                                webUrl: 'https://jeokdanghi-relationship.com',
+                            },
+                        },
+                        {
+                            title: '허밍버드 구경가기',
+                            link: {
+                                mobileWebUrl: 'https://www.instagram.com/100doci',
+                                webUrl: 'https://www.instagram.com/100doci',
+                            },
+                        },
+                    ],
                 })
             }
             document.getElementById("facebookBtn").onclick = function() {
