--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -74,14 +74,14 @@ html(lang="en")
                     },
                     buttons: [
                         {
-                            title: '관계 유형 테스트하기',
+                            title: '관계 유형\n테스트하기',
                             link: {
                                 mobileWebUrl: 'https://jeokdanghi-relationship.com',
                                 webUrl: 'https://jeokdanghi-relationship.com',
                             },
                         },
                         {
-                            title: '허밍버드 구경가기',
+                            title: '허밍버드\n구경가기',
                             link: {
                                 mobileWebUrl: 'https://www.instagram.com/100doci',
                                 webUrl: 'https://www.instagram.com/100doci',
