--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -65,8 +65,6 @@ html(lang="en")
                         title: "재미로 보는 관계 유형 테스트",
                         description: "나의 인간관계 유형은?",
                         imageUrl: resultSharedImage,
-                        imageWidth: 890,
-                        imageHeight: 1300,
                         link: {
                             mobileWebUrl: "https://jeokdanghi-relationship.com",
                             webUrl: "https://jeokdanghi-relationship.com",
@@ -74,14 +72,14 @@ html(lang="en")
                     },
                     buttons: [
                         {
-                            title: '관계 유형\n테스트하기',
+                            title: '테스트하기',
                             link: {
                                 mobileWebUrl: 'https://jeokdanghi-relationship.com',
                                 webUrl: 'https://jeokdanghi-relationship.com',
                             },
                         },
                         {
-                            title: '허밍버드\n구경가기',
+                            title: '허밍버드가기',
                             link: {
                                 mobileWebUrl: 'https://www.instagram.com/100doci',
                                 webUrl: 'https://www.instagram.com/100doci',
