--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -65,6 +65,7 @@ html(lang="en")
                         title: "재미로 보는 관계 유형 테스트",
                         description: "나의 인간관계 유형은?",
                         imageUrl: resultSharedImage,
+                        imageHeight: 1300,
                         link: {
                             mobileWebUrl: "https://jeokdanghi-relationship.com",
                             webUrl: "https://jeokdanghi-relationship.com",
