--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -19,13 +19,13 @@ html(lang="en")
         script(src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js")
         script(src="https://unpkg.com/sweetalert/dist/sweetalert.min.js")
         //- og meta tag
-        meta(property="og:type" content="website")
-        meta(property="og:url" content="https://jeokdanghi-relationship.com")
-        meta(property="og:image" content="https://hbird1005.dothome.co.kr/images/sharedImages/snsShared.png")
-        meta(property="og:title" content="재미로 보는 관계 유형 테스트")
-        meta(property="og:description" content="나의 인간관계 유형은?")
-        meta(property="twitter:card" content="summary_large_image")
-        meta(property="twitter:image" content="https://hbird1005.dothome.co.kr/images/sharedImages/snsShared.png")
+        meta(name="og:type" content="website")
+        meta(name="og:url" content="https://jeokdanghi-relationship.com")
+        //- meta(name="og:image" content="https://hbird1005.dothome.co.kr/images/sharedImages/snsShared.png")
+        meta(name="og:title" content="재미로 보는 관계 유형 테스트")
+        meta(name="og:description" content="나의 인간관계 유형은?")
+        meta(name="twitter:card" content="summary_large_image")
+        //- meta(name="twitter:image" content="https://hbird1005.dothome.co.kr/images/sharedImages/snsShared.png")
         //- preloading local fonts
         link(rel="preload" href="configs/fonts/SCDream5.woff2" as="font" type="font/woff2" crossorigin)
         link(rel="preload" href="configs/fonts/SCDream6.woff2" as="font" type="font/woff2" crossorigin)
