몰라몰라몰라

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -20,7 +20,7 @@ html(lang="en")
         script(src="https://unpkg.com/sweetalert/dist/sweetalert.min.js")
         //- og meta tag
         meta(property="og:type" content="website")
-        //- meta(property="og:url" content="https://jeokdanghi-relationship.com")
+        meta(property="og:url" content="https://cocky-yalow-588613.netlify.app/")
         meta(property="og:image" content="https://hbird1005.dothome.co.kr/images/sharedImages/snsShared.png")
         meta(property="og:title" content="재미로 보는 관계 유형 테스트")
         meta(property="og:description" content="나의 인간관계 유형은?")
