--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -13,7 +13,7 @@
                     img.snsIcon(data-src="https://hbird1005.dothome.co.kr/images/shareIcons/kakao-icon.png")
                 a#facebookBtn(ontouchstart="")
                     img.snsIcon(data-src="https://hbird1005.dothome.co.kr/images/shareIcons/facebook-icon.png")
-                a(href="https://twitter.com/intent/tweet?text=instagram.com/100doci&url=https://cocky-yalow-588613.netlify.app" ontouchstart="")
+                a#twitterBtn(href="https://twitter.com/intent/tweet?url=https://jeokdanghi-relationship.com&text=instagram.com/100doci&hashtags=관계유형테스트" ontouchstart="")
                     img.snsIcon(data-src="https://hbird1005.dothome.co.kr/images/shareIcons/twitter-icon.png")
                 a#sms-link-btn(ontouchstart="")
                     img.snsIcon(data-src="https://hbird1005.dothome.co.kr/images/shareIcons/sms-icon.png")
