wtf image resouces change - bug resolved

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -21,7 +21,7 @@ html(lang="en")
         //- og meta tag
         meta(property="og:type" content="website")
         meta(property="og:url" content="https://jeokdanghi-relationship.com")
-        meta(property="og:image" content="https://front-juno.github.io/images-fonts/images/jeokdanghi/sharedImages/snsShared.png")
+        meta(property="og:image" content="https://mestuss.github.io/images-fonts/images/jeokdanghi/sharedImages/snsShared.png")
         meta(property="og:title" content="재미로 보는 관계 유형 테스트")
         meta(property="og:description" content="나의 인간관계 유형은?")
         meta(name="twitter:card" content="summary_large_image")
