--- a/src/views/screens/question4.pug
+++ b/src/views/screens/question4.pug
@@ -1,10 +1,10 @@
 .slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
-            img(data-src="https://front-juno.github.io/images-fonts/images/jeokdanghi/questions/q4&7Bg.png" alt="")
+            img(data-src="https://mestuss.github.io/images-fonts/images/jeokdanghi/questions/q4&7Bg.png" alt="")
         .content__row
             .count
-                img(data-src="https://front-juno.github.io/images-fonts/images/jeokdanghi/questions/q4Count.png" alt="")
+                img(data-src="https://mestuss.github.io/images-fonts/images/jeokdanghi/questions/q4Count.png" alt="")
             .main
                 .main__text
                     span 연락한 지 오래된 친구와의 사진이
@@ -13,8 +13,8 @@
                         br
                         | 당신은?
                 .main__image.q4
-                    img(data-src="https://front-juno.github.io/images-fonts/images/jeokdanghi/questions/q4Image.png" alt="")
-                    img(data-src="https://front-juno.github.io/images-fonts/images/jeokdanghi/questions/q4Item1.png" alt="")
+                    img(data-src="https://mestuss.github.io/images-fonts/images/jeokdanghi/questions/q4Image.png" alt="")
+                    img(data-src="https://mestuss.github.io/images-fonts/images/jeokdanghi/questions/q4Item1.png" alt="")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
